# tix

./: .gitignore  .golangci.yml  .goreleaser-nightly.yaml  .goreleaser.install.sh  .goreleaser.yaml  .tix.example.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  justfile  main.go
.claude/skills/tix-release/: SKILL.md
.github/workflows/: ci.yml  nightly.yml  release.yml
cmd/: cleanup.go  cleanup_test.go  create.go  create_test.go  mr.go  ready.go  root.go  setdesc.go  start.go  start_test.go  status.go  unready.go  version.go
docs/plans/: 2026-03-09-worktree-redesign-impl.md  2026-03-09-worktree-redesign.md
docs/superpowers/plans/: 2026-06-01-auto-stash.md  2026-06-01-non-interactive-flag.md  2026-06-04-status-command.md
docs/superpowers/specs/: 2026-06-01-auto-stash-design.md  2026-06-01-non-interactive-flag-design.md  2026-06-04-status-command-design.md
internal/config/: repository.go  repository_test.go
internal/git/: git.go  git_test.go  worktree.go
internal/logger/: logger.go
internal/services/: embeddings.go  embeddings_test.go  github.go  gitlab.go  issue_provider.go  mr_description.go  openai.go  scm.go  scm_test.go  status.go  status_test.go
internal/utils/: browser.go  cmd.go  strings.go  utils.go  utils_test.go
internal/version/: version.go
src/: args.rs  git.rs  github.rs  gitlab.rs  main.rs  settings.rs  util.rs
src/commands/: create.rs
