[package]
name = "tix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.14.1", features = ["yaml"] }
gitlab = "0.1706.0"
inquire = "0.7.5"
shellexpand = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.94"
git2 = "0.19.0"
