[package]
name = "tix"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["yaml"] }
gitlab = "0.1706.0"
inquire = "0.7.5"
shellexpand = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
git2 = "0.19.0"
octocrab = "0.42.1"
